--- a/miniprogram/components/cloudTipModal/index.wxml
+++ b/miniprogram/components/cloudTipModal/index.wxml
@@ -1,8 +1,10 @@
 <!--miniprogram/components/cloudTipModal/index.wxml-->
 <!--  wx:if="{{showUploadTip}}" -->
 <view class="install_tip" wx:if="{{showTip}}">
-  <view class="install_tip_back"></view>
-  <view class="install_tip_detail">
+  <!-- 遮罩层，点击可关闭 -->
+  <view class="install_tip_back" bindtap="onMaskTap"></view>
+  <!-- 弹框内容，禁止事件冒泡 -->
+  <view class="install_tip_detail" catchtap="">
     <image class="install_tip_close" bind:tap="onClose" src="../../images/icons/close.png"/>
     <view class="install_tip_detail_title">{{title}}</view>
     <view class="install_tip_detail_tip">{{content}}</view>
